<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/action_search"
            android:icon="@drawable/ic_action_search"
            android:title="@string/search"
            app:actionViewClass="androidx.appcompat.widget.SearchView"
            app:showAsAction="always|collapseActionView"/>

    <item android:icon="@drawable/ic_filter_list_black_24dp"
          android:title="@string/menu_filter"
          app:showAsAction="ifRoom|withText">
        <menu>
            <item android:id="@+id/menu_stared_only"
                  android:icon="@drawable/ic_star_24dp"
                  app:iconTint="@color/fgColor"
                  android:title="@string/menu_has_star"
                  android:checkable="true"
            />
            <item android:id="@+id/menu_current_network_only"
                  android:icon="@drawable/ic_flag_network"
                  app:iconTint="@color/fgColor"
                  android:title="@string/menu_current_chain"
                  android:checkable="true"/>
        </menu>
    </item>
    <item
            android:id="@+id/menu_undelete"
            android:title="@string/undelete_all"
            android:checkable="true"
            app:showAsAction="ifRoom"/>
</menu>