<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:title="@string/undelete_all"
            android:id="@+id/menu_undelete"
            app:showAsAction="never" />
    <item
            android:id="@+id/action_search"
            android:icon="@drawable/ic_action_search"
            android:title="@string/search"
            app:actionViewClass="androidx.appcompat.widget.SearchView"
            app:showAsAction="always|collapseActionView"/>


    <item
            android:title="@string/delete_forever"
            android:id="@+id/menu_delete_forever"
            android:icon="@drawable/ic_delete_forever_black_24dp"
            app:showAsAction="ifRoom"/>
</menu>