<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:title="@string/share"
            android:id="@+id/menu_share"
            android:icon="@drawable/ic_share_24dp"
            app:showAsAction="ifRoom"
    />
    <item
            android:title="@string/share"
            android:id="@+id/menu_copy_to_clipboard"
            android:icon="@drawable/ic_content_copy"
            app:showAsAction="ifRoom"
    />
    <item
            android:title="@string/save"
            android:id="@+id/menu_save"
            android:icon="@drawable/ic_save_black_24dp"
            app:showAsAction="ifRoom"
    />

    <item
            android:title="@string/print"
            android:id="@+id/menu_print"
            android:icon="@drawable/ic_print_black_24dp"
            app:showAsAction="ifRoom"
    />
</menu>