<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context="org.walleth.activities.MainActivity">

    <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/input_hint_account_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/nameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/input_hint_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/noteInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/notification_checkbox"
            android:text="@string/notify_on_transactions"/>
</LinearLayout>
