<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:animateLayoutChanges="true"
            tools:context=".request.RequestActivity">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:animateLayoutChanges="true"
            tools:context="org.walleth.base_activities.RequestActivity">

        <TextView
                android:id="@+id/welcome_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:fontFamily="sans-serif"
                android:textSize="16sp"
                android:padding="16dp"
                android:text="@string/text_extract_funds"/>

        <ImageView
                android:id="@+id/receive_qrcode"
                android:layout_width="@dimen/qrcode_size"
                android:layout_height="@dimen/qrcode_size"
                android:padding="16dp"
                android:contentDescription="@string/qr_code"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/welcome_text"/>

        <CheckBox
                android:layout_centerHorizontal="true"
                android:text="@string/request_funds_add_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/receive_qrcode"
                android:id="@+id/add_value_checkbox"/>

        <org.walleth.valueview.ValueView
                android:layout_width="wrap_content"
                android:layout_below="@+id/add_value_checkbox"
                android:id="@+id/value_input"
                android:visibility="gone"
                app:allowEdit="true"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/request_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:fontFamily="sans-serif"
                android:paddingTop="16dp"
                android:layout_below="@id/value_input"/>

    </RelativeLayout>
</ScrollView>