<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:animateLayoutChanges="true"
        android:focusableInTouchMode="true"
        tools:context="org.walleth.activities.CreateTransactionActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ScrollView
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

            <TextView
                    android:text="@string/create_transaction_sender_label"
                    android:id="@+id/from_label"
                    style="@style/section_header"/>


            <TextView
                    android:layout_below="@id/from_label"
                    android:layout_alignParentLeft="true"
                    android:layout_toLeftOf="@id/from_address_list_button"
                    android:singleLine="true"
                    android:ellipsize="middle"
                    android:padding="16dp"
                    android:id="@+id/from_address"
                    tools:text="wiefjre gujreoijger ihgiure hgiuhreihghre hgirehgiu"
                    android:fontFamily="sans-serif"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/from_address_list_button"
                    app:srcCompat="@drawable/ic_list_black_24dp"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/from_label"
                    style="@style/button"/>


            <TextView
                    android:layout_below="@id/from_address"
                    android:text="@string/create_transaction_receiver_label"
                    android:id="@+id/to_label"
                    style="@style/section_header"/>


            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/address_list_button"
                    app:srcCompat="@drawable/ic_list_black_24dp"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/to_label"
                    style="@style/button"/>

            <TextView
                    android:layout_below="@id/to_label"
                    android:layout_alignParentLeft="true"
                    android:layout_toLeftOf="@id/address_list_button"
                    android:singleLine="true"
                    android:ellipsize="middle"
                    android:padding="16dp"
                    android:id="@+id/to_address"
                    tools:text="wiefjre gujreoijger ihgiure hgiuhreihghre hgirehgiu"
                    android:fontFamily="sans-serif"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:text="@string/create_transaction_function_label"
                    android:id="@+id/function_label"
                    android:layout_below="@id/to_address"
                    style="@style/section_header"/>

            <TextView
                    android:layout_below="@id/function_label"
                    android:layout_alignParentLeft="true"
                    android:singleLine="true"
                    android:ellipsize="middle"
                    android:padding="16dp"
                    android:id="@+id/function_text"
                    tools:text="wiefjre gujreoijger ihgiure hgiuhreihghre hgirehgiu"
                    android:fontFamily="sans-serif"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:layout_below="@id/function_text"
                    android:text="@string/create_tx_amount"
                    style="@style/section_header"
                    android:id="@+id/amount_label"/>

            <LinearLayout
                    android:id="@+id/amount_container"
                    android:layout_below="@id/amount_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <org.walleth.ui.valueview.ValueView
                        android:layout_gravity="center"
                        android:id="@+id/amount_value"
                        app:allowEdit="true"
                        android:paddingBottom="16dp"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/sweep_button"

                        android:layout_gravity="center"
                        app:srcCompat="@drawable/ic_all_inclusive_black_24dp"
                        style="@style/button"/>

            </LinearLayout>


            <org.walleth.ui.valueview.ValueViewSmall
                    android:layout_centerHorizontal="true"
                    android:id="@+id/fee_value_view"
                    android:layout_below="@id/amount_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <Button
                    android:layout_margin="16dp"
                    android:id="@+id/show_advanced_button"
                    android:layout_below="@id/fee_value_view"
                    android:text="@string/create_tx_show_advanced_options"
                    style="@style/MaterialButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:layout_below="@id/amount_container"
                    android:text="@string/create_tx_fee"
                    android:id="@+id/fee_label"
                    style="@style/section_header"/>

            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="match_parent"
                          android:paddingLeft="16dp"
                          android:visibility="gone"
                          android:layout_below="@id/fee_value_view"
                          android:id="@+id/gas_price_input_container">
                <com.google.android.material.textfield.TextInputLayout
                        android:hint="@string/create_tx_gas_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    <androidx.appcompat.widget.AppCompatEditText
                            android:minWidth="128dp"
                            android:id="@+id/gas_price_input"
                            android:inputType="number|numberDecimal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatImageView
                        style="@style/button"
                        app:srcCompat="@drawable/ic_local_gas_station_black_24dp"
                        android:id="@+id/gas_station_image"
                        android:layout_gravity="center_vertical"/>
            </LinearLayout>
            <com.google.android.material.textfield.TextInputLayout
                    android:paddingLeft="16dp"
                    android:layout_below="@id/gas_price_input_container"
                    android:id="@+id/gas_limit_input_container"
                    android:hint="@string/create_tx_gas_limit"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatEditText
                        android:minWidth="128dp"
                        android:id="@+id/gas_limit_input"
                        android:inputType="number|numberDecimal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nonce"
                    android:visibility="gone"
                    android:id="@+id/nonce_title"
                    android:layout_below="@id/gas_limit_input_container"
                    style="@style/section_header"/>

            <com.google.android.material.textfield.TextInputLayout
                    android:paddingLeft="16dp"
                    android:layout_below="@id/nonce_title"
                    android:id="@+id/nonce_input_container"
                    android:hint="@string/create_tx_nonce"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatEditText
                        android:minWidth="128dp"
                        android:id="@+id/nonce_input"
                        android:inputType="number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>


        </RelativeLayout>
    </ScrollView>

    <com.dmitrymalkovich.android.ProgressFloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_gravity="bottom|right">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/FABStyle"
                android:id="@+id/fab"/>

        <ProgressBar
                style="@style/Widget.AppCompat.ProgressBar"
                android:id="@+id/fab_progress_bar"
                android:visibility="invisible"
                android:indeterminateTint="@color/colorPrimary"
                android:indeterminateTintMode="src_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </com.dmitrymalkovich.android.ProgressFloatingActionButton>

</FrameLayout>